--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,3 +3,26 @@
   padding: 0;
   font-family: 'Work Sans';
 }
+.foooter{
+  margin-top: 130px;
+
+}
+.footer-container{
+  height: 50px;
+  width: 100%;
+  background: rgba(255, 144, 14, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-container p{
+  font-size: 20px;
+line-height: 23px;
+  color: #000000;
+}
+@media screen and (max-width:576px){
+  .footer-container p{
+    font-size: 16px;
+    text-align: center;
+  }
+}
